Fixed localization and removed commented methods

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -138,7 +138,8 @@ merchants.submitPayment=confirm payment
 merchants.successfulBalanceDeposit=you have successfully deposited your wallet in the amount: {0}
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
-merchants.depositNotification = Please pay %1s on the wallet %1s
+merchants.depositNotification.body = Please pay %1s on the wallet %1s
+merchants.depositNotification.header = Exrates payment notification
 merchants.sum=Sum
 merchants.sumToPay=Sum to pay
 merchants.withdraw=Withdraw
