#[TESTING-6] Grammar mistake

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -122,10 +122,10 @@ merchants.invalidSum=Некорректная сумма платежа.
 merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
 merchants.meansOfPayment=Способ оплаты
 merchants.merchants=Мерчанты
-merchants.modalInputCommission=Коммиссия биржи составит : __amount __currency (__percent)
+merchants.modalInputCommission=Комиссия биржи составит : __amount __currency (__percent)
 merchants.modalInputFinalSum=Итого сумма к оплате : __amount __currency
 merchants.modalInputHeader=Вы вводите __amount __currency через платежную систему __merchant
-merchants.modalOutputCommission=Коммиссия биржи составит : __amount __currency (__percent)
+merchants.modalOutputCommission=Комиссия биржи составит : __amount __currency (__percent)
 merchants.modalOutputFinalSum=Итого сумма к выводу : __amount __currency
 merchants.modalOutputHeader=Вы выводите __amount __currency через платежную систему __merchant
 merchants.modalOutputWallet=Введите номер кошелька :
@@ -213,7 +213,7 @@ submitorder.change=Изменить
 submitorder.commission=Комиссия
 submitorder.edit=Редактировать ордер
 submitorder.submit=Разместить ордер
-submitorder.sumwithcommission=Сумма с учетом коммиссии
+submitorder.sumwithcommission=Сумма с учетом комиссии
 submitorder.text=Подтвердите создание ордера с такими данными
 submitorder.title=Подтверждение размещения ордера
 subusermenu.api=API
