add capcha for header entrance + tune valdation and locale for Order entity

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -271,3 +271,7 @@ dashboard.otherpairs=Other pairs
 merchants.currencyforoutput = output currency
 dashboard.orderPrice=Price
 register.capchaincorrect=A problem occurred while checking the capcha. Try again, please
+order.fillfield = Complete the field
+order.minvalue=The value must be greater than 0.000000001
+order.maxvalue=The value must be less than 10 000
+order.valuerange=The value must be in the following range: 0.000000001 - 10 000
