--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -270,3 +270,7 @@ dashboard.otherpairs=Другие пары
 merchants.currencyforoutput = Валюта к выводу
 dashboard.orderPrice=Цена
 register.capchaincorrect=Возникла ошибка при проверке capcha. Повторите, пожалуйста, еще раз
+order.fillfield = Заполните поле
+order.minvalue=Значение должно быть больше 0.000000001
+order.maxvalue=Значение должно быть меньше 10 000
+order.valuerange=Значение должно быть в диапазоне: 0.000000001 - 10 000
