--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -275,3 +275,6 @@ order.fillfield = Complete the field
 order.minvalue=The value must be greater than 0.000000001
 order.maxvalue=The value must be less than 10 000
 order.valuerange=The value must be in the following range: 0.000000001 - 10 000
+login.latinonly=The name must be Latin characters
+login.symbonly= Can contain the characters "-" and "_"
+login.notdigit= Must not start with a digit
