--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -274,3 +274,6 @@ order.fillfield = Заполните поле
 order.minvalue=Значение должно быть больше 0.000000001
 order.maxvalue=Значение должно быть меньше 10 000
 order.valuerange=Значение должно быть в диапазоне: 0.000000001 - 10 000
+login.latinonly=Имя должно быть латиницей
+login.symbonly=Может содержать символы "-" и "_"
+login.notdigit= Не должно начинаться с цифры
