Included EDR-Coin commission into payment amoun

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -140,6 +140,7 @@ merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amoun
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
 merchants.depositNotification.body = Please pay %1s on the wallet %1s
 merchants.depositNotification.header = Exrates payment notification
+merchants.depositNotificationWithFee = Please pay %1s on the wallet %1s (Including EDR Coin commission)
 merchants.sum=Sum
 merchants.sumToPay=Sum to pay
 merchants.withdraw=Withdraw
