--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -145,6 +145,8 @@ merchants.pendingEnrollment=Зачисление средств приозойд
 #not translated
 merchants.depositNotification.body = Пожалуйста, оплатите %1s на кошелек %1s
 #not translated
+merchants.depositNotificationWithFee = Пожалуйста, оплатите %1s на кошелек %1s (Включая комиссию EDR Coin)
+#not translated
 merchants.depositNotification.header = Exrates Уведомление об оплате
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
