--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -290,3 +290,6 @@ order.valuerange=The value must be in the following range: 0.000000001 - 10 000
 login.latinonly=The name must be Latin characters
 login.symbonly= Can contain the characters "-" and "_"
 login.notdigit= Must not start with a digit
+
+
+admin.balance=Balance
