capcha key in properties for each profile. Modify jsp and js for it

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -277,3 +277,6 @@ order.valuerange=Значение должно быть в диапазоне: 0
 login.latinonly=Имя должно быть латиницей
 login.symbonly=Может содержать символы "-" и "_"
 login.notdigit= Не должно начинаться с цифры
+
+
+admin.balance=Баланс
