admin panel: main panel with 3 sections; user administration panel with 3 sections; redone DataTables; refactoring design some forms; added method to AdminController; correct some bugs

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -282,3 +282,6 @@ login.notdigit= Must not start with a digit
 
 
 admin.balance=Balance
+admin.transactions=Transactions
+admin.wallets=Wallets
+orderstatus.name=Status
