--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1,4 +1,5 @@
-﻿﻿acceptorder.submit=Принять
+﻿#
+acceptorder.submit=Принять
 acceptorder.text=Вы принимаете ордер с такими данными
 acceptorder.title=Принятие ордера
 acceptordersuccess.link=Посмотреть
@@ -310,3 +311,6 @@ login.notdigit= Не должно начинаться с цифры
 
 
 admin.balance=Баланс
+admin.transactions=Транзакции
+admin.wallets=Счета
+orderstatus.name=Статус
