--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1,5 +1,7 @@
 ﻿﻿#
 acceptorder.submit=Принять
+#
+acceptorder.submit=Принять
 acceptorder.text=Вы принимаете ордер с такими данными
 acceptorder.title=Принятие ордера
 acceptordersuccess.link=Посмотреть
