implemented acceptance for withdrawal

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -4,6 +4,7 @@ acceptorder.title=accept order
 acceptordersuccess.link=see
 acceptordersuccess.text=you have successfully accepted order.
 acceptordersuccess.title=order was accepted!
+admin.withdrawRequests=Withdrawal requests
 admin.addUser=Add user
 admin.admins=Administrators
 admin.cancel=Cancel
@@ -28,6 +29,16 @@ admin.status=Status
 admin.title=Administration
 admin.user=User
 admin.users=Users
+withdrawal.requestDatetime=Date of creation
+withdrawal.user=User
+withdrawal.amount=Amount
+withdrawal.currency=Currency
+withdrawal.commission=Commission
+withdrawal.merchant=Merchant
+withdrawal.wallet=User wallet
+withdrawal.acceptanceDatetime=Acceptance date
+withdrawal.acceptanceUser=Acceptance user
+withdrawal.status=Status
 createdorder.edit=go to my orders
 createdorder.text=your order was placed in common stack.
 createdorder.title=order created
@@ -124,15 +135,18 @@ merchants.meansOfPayment=Payment method
 merchants.merchants=merchants
 merchants.modalInputCommission=stock exchange commission: __amount __currency (__percent)
 merchants.modalInputFinalSum=Total amount to be paid : __amount __currency
-merchants.modalInputHeader=you use a payment system __merchant for inputting __amount __currency
+merchants.modalInputHeader=You use a payment system __merchant for inputting __amount __currency
 merchants.modalOutputCommission=Exchange Fee will be : __amount __currency (__percent)
 merchants.modalOutputFinalSum=Amount to be enrolled : __amount __currency
-merchants.modalOutputHeader=You draw __amount __currency through the payment system __merchant
+merchants.modalOutputHeader=You withdraw __amount __currency through the payment system __merchant
 merchants.modalOutputWallet=Enter your wallet number :
 merchants.noWallet=no active wallets available
 merchants.notAvaliablePayment=unfortunately no payment is available at the moment.
 merchants.notEnoughMoney=not enough money in the wallet. Wallet shall be recharged and a new payment shall be made.
 merchants.notEnoughWalletMoney=not enough money in the wall
+merchants.withdrawRequestError=A withdrawal request error. Please, try again.
+merchants.withdrawNotification=Your withdrawal request #{0} through system {1} has been accepted and it will be processed within 48 hours.
+merchants.withdrawNotification.header=Exrates Withdrawal notification
 merchants.outputTitle=Withdrawal
 merchants.submitPayment=confirm payment
 merchants.successfulBalanceDeposit=you have successfully deposited your wallet in the amount: {0}
@@ -265,9 +279,6 @@ validation.passwordincorrect=The password should consist of letters and numbers 
 validation.passwordmismatch=passwords do not match!
 validation.passwordrequired=enter password!
 validation.phoneincorrect=Enter the phone number in "380671234567" format !
-
-
-
 dashboard.otherpairs=Other pairs
 merchants.currencyforoutput = output currency
 dashboard.orderPrice=Price
