added company wallets form in new disign. Redone submit order operations (accept, create) with ajax request. Redone error mesages (used noty)

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -205,7 +205,7 @@ orders.amountbuy=sum
 orders.amountsell=sum
 orders.amountwithcommission=commission sum
 orders.commission=commission, %
-orders.createorderbuy=create orderbuy
+orders.createorderbuy=Create a buy order
 orders.createordersell=Create a sell order
 orders.currbuy=buy
 orders.currencyforbuy=buy
