--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -147,6 +147,16 @@ merchants.notEnoughWalletMoney=not enough money in the wall
 merchants.withdrawRequestError=A withdrawal request error. Please, try again.
 merchants.withdrawNotification=Your withdrawal request #{0} through system {1} has been accepted and it will be processed within 48 hours.
 merchants.withdrawNotification.header=Exrates Withdrawal notification
+merchants.withdrawRequestAccepted=Accepted
+merchants.withdrawRequestAccept=Accept
+merchants.withdrawRequestDecline=Decline
+merchants.promptWithdrawRequestAccept=Are you sure you want to accept the request?
+merchants.promptWithdrawRequestDecline=Are you sure you want to decline the request?
+merchants.WithdrawRequestError=An error has occurred, inform the administrator.
+merchants.WithdrawRequestAccept=Withdrawal request was successfully accepted.
+merchants.WithdrawRequestDecline=Withdrawal request was declined.
+merchants.withdrawNotificationAccepted=Your withdrawal request #{0} through system {1} has been successfully accepted. Funds transferred to your wallet.
+merchants.withdrawNotificationDeclined=Your withdrawal request #{0} through system {1} was rejected.
 merchants.outputTitle=Withdrawal
 merchants.submitPayment=confirm payment
 merchants.successfulBalanceDeposit=you have successfully deposited your wallet in the amount: {0}
