--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -175,7 +175,27 @@ merchants.withdrawRequestError=Ошибка при формировании за
 #not translated
 merchants.withdrawNotification=Ваша заявка на вывод #{0} через систему {1} принята и будет обработана в течении 48 часов.
 #not translated
+merchants.withdrawNotificationAccepted=Ваша заявка на вывод #{0} через систему {1} успешно обработана. Средства перечислены на Ваш кошелек.
+#not translated
+merchants.withdrawNotificationDeclined=Ваша заявка на вывод #{0} через систему {1} была отклонена.
+#not translated
 merchants.withdrawNotification.header=Exrates Уведомление о заявке на вывод средств
+#not translated
+merchants.withdrawRequestAccepted=Подтверждено
+#not translated
+merchants.withdrawRequestAccept=Подтвердить
+#not translated
+merchants.withdrawRequestDecline=Отклонить
+#not translated
+merchants.promptWithdrawRequestAccept=Вы уверены, что хотите принять заявку ?
+#not translated
+merchants.promptWithdrawRequestDecline=Вы уверены, что хотите отклонить заявку ?
+#not translated
+merchants.WithdrawRequestError=Произошла ошибка, сообщите администратору.
+#not translated
+merchants.WithdrawRequestAccept=Заявка успешно принята
+#not translated
+merchants.WithdrawRequestDecline=Заявка отклонена
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
 myorders.amountwithcommission=Сумма с комиссией
