added fin password confirmation for fin operations

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -332,3 +332,7 @@ admin.balance=Баланс
 admin.transactions=Транзакции
 admin.wallets=Счета
 orderstatus.name=Статус
+admin.submitfinpassword=Отправить
+admin.wrongfinpassword=Финансовый пароль введен не верно.
+admin.absentfinpassword=Не определен финансовый пароль. Для осуществления финансовых операций необходимо задать финансовый пароль.
+admin.notconfirmedfinpassword=Вы не подтвердили смену финансового пароля. Проверьте почту и следуйте дальнейшим инструкциям. Или пройдите процедуру смены пароля еще раз.
