--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -306,3 +306,7 @@ admin.balance=Balance
 admin.transactions=Transactions
 admin.wallets=Wallets
 orderstatus.name=Status
+admin.submitfinpassword=submit
+admin.wrongfinpassword=Entered the wrong financial password
+admin.absentfinpassword=The financial password is not defined. You must set the financial password to make financial operations
+admin.notconfirmedfinpassword=You must to confirm financial password change. check your e-mail and follow the instructions in received message. Or follow the procedure for changing the password again.
