--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -310,3 +310,6 @@ admin.submitfinpassword=submit
 admin.wrongfinpassword=Entered the wrong financial password
 admin.absentfinpassword=The financial password is not defined. You must set the financial password to make financial operations
 admin.notconfirmedfinpassword=You must to confirm financial password change. check your e-mail and follow the instructions in received message. Or follow the procedure for changing the password again.
+register.unsuccessfullyproved=Link to registration confirmation is not valid (expired)
+admin.finpasswordproved=You have successfully confirmed your financial password
+admin.finpasswordnotproved=Link to financial password confirmation is not valid (expired)
