--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -337,3 +337,6 @@ admin.submitfinpassword=Отправить
 admin.wrongfinpassword=Финансовый пароль введен не верно.
 admin.absentfinpassword=Не определен финансовый пароль. Для осуществления финансовых операций необходимо задать финансовый пароль.
 admin.notconfirmedfinpassword=Вы не подтвердили смену финансового пароля. Проверьте почту и следуйте дальнейшим инструкциям. Или пройдите процедуру смены пароля еще раз.
+register.unsuccessfullyproved=Ссылка на подтверждение регистрации не действительна (просрочена).
+admin.finpasswordproved=Вы успешно подтвердили свой финансовый пароль
+admin.finpasswordnotproved=Ссылка на подтверждение финансового пароля не действительна (просрочена).
