add method and changes to token scheduler. RegistrationConfirmed.jsp replaced with noty usage

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -285,7 +285,7 @@ validation.nicknameexists=this nickname already exists!
 validation.nicknamerequired=nickname fiels shall be filled in!
 validation.notreadrules=resource rules shall be read!
 validation.orderNotEnoughMoney=not enough money in your wallet for the transaction!
-validation.passwordincorrect=The password should consist of letters and numbers with a total length of 8 to 20 characters!
+validation.passwordincorrect=The password should consist of letters (latin only) and numbers with a total length of 8 to 20 characters!
 validation.passwordmismatch=passwords do not match!
 validation.passwordrequired=enter password!
 validation.phoneincorrect=Enter the phone number in "380671234567" format !
@@ -313,3 +313,5 @@ admin.notconfirmedfinpassword=You must to confirm financial password change. che
 register.unsuccessfullyproved=Link to registration confirmation is not valid (expired)
 admin.finpasswordproved=You have successfully confirmed your financial password
 admin.finpasswordnotproved=Link to financial password confirmation is not valid (expired)
+admin.passwordproved=You have successfully confirmed your password
+admin.passwordnotproved=Link to password confirmation is not valid (expired)
