--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -310,7 +310,7 @@ validation.nicknameexists=Такой nickname уже существует!
 validation.nicknamerequired=Поле nickname обязательно для заполнения!
 validation.notreadrules=Необходимо ознакомиться с правилами ресурса!
 validation.orderNotEnoughMoney=На Вашем счету недостаточно денег для данной операции!
-validation.passwordincorrect=Пароль должен содержать буквы и цифры общей длиной от 8 до 20 символов!
+validation.passwordincorrect=Пароль должен содержать буквы (только латиница) и цифры общей длиной от 8 до 20 символов!
 validation.passwordmismatch=Пароли не совпадают!
 validation.passwordrequired=Введите пароль!
 validation.phoneincorrect=Введите телефонный номер в формате "380671234567"!
@@ -340,3 +340,5 @@ admin.notconfirmedfinpassword=Вы не подтвердили смену фин
 register.unsuccessfullyproved=Ссылка на подтверждение регистрации не действительна (просрочена).
 admin.finpasswordproved=Вы успешно подтвердили свой финансовый пароль
 admin.finpasswordnotproved=Ссылка на подтверждение финансового пароля не действительна (просрочена).
+admin.passwordproved=Вы успешно подтвердили свой пароль
+admin.passwordnotproved=Ссылка на подтверждение пароля не действительна (просрочена).
