--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -330,3 +330,13 @@ admin.finpasswordproved=You have successfully confirmed your financial password
 admin.finpasswordnotproved=Link to financial password confirmation is not valid (expired)
 admin.passwordproved=You have successfully confirmed your password
 admin.passwordnotproved=Link to password confirmation is not valid (expired)
+admin.ref=Reference
+orders.currencybuy=Buy
+orders.currencysale=Sell
+orders.for=for
+order.rate=Exchange rate per unit
+order.total=Total
+order.commission=Commission
+order.amountwithcommission=Total with the commission
+order.minrate=The exchange rate must be greater than 0
+orders.exrate=Rate
