--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -363,3 +363,13 @@ admin.finpasswordproved=Вы успешно подтвердили свой фи
 admin.finpasswordnotproved=Ссылка на подтверждение финансового пароля не действительна (просрочена).
 admin.passwordproved=Вы успешно подтвердили свой пароль
 admin.passwordnotproved=Ссылка на подтверждение пароля не действительна (просрочена).
+admin.ref=Ссылка
+orders.currencybuy=Покупка
+orders.currencysale=Продажа
+orders.for=за
+order.rate=Курс за единицу
+order.total=Всего
+order.commission=Комиссия
+order.amountwithcommission=Итого с комиссией
+order.minrate=Обменный курс должен быть больше 0
+orders.exrate=Курс
