--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -160,7 +160,7 @@ merchants.withdrawNotificationDeclined=Your withdrawal request #{0} through syst
 merchants.close=Close
 merchants.outputTitle=Withdrawal
 merchants.submitPayment=confirm payment
-merchants.successfulBalanceDeposit=you have successfully deposited your wallet in the amount: {0}
+merchants.successfulBalanceDeposit=You have successfully deposited {0}. Commission {1}%, funds transferred to your wallet: {2}
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
 merchants.depositNotification.body = Please pay {0} on the wallet {1}
