Added commission computation on server-side; Provided representation confirmations-number when inputing crypto-currency; Refactored modal window (deposit/withdrawal credits)

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -114,7 +114,7 @@ login.notFound=Wrong password or login!
 login.password=Password
 login.submit=Submit
 login.title=Please, login
-mechants.commission=stock exchange commission
+mechants.commission=Stock exchange commission
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Yandex Money
 merchants.amountToBeCredited=Amount to be enrolled
@@ -126,14 +126,14 @@ merchants.deposit=Refill
 merchants.dismiss=Dismiss
 merchants.incorrectPaymentDetails=Incorrect payment details.
 merchants.inputCurrency=input currency
-merchants.inputTitle=input
+merchants.inputTitle=Deposit
 merchants.internalError=an error occurred. Please try again later.
 merchants.invalidMerchant=We are sorry but the merchant is not supported
 merchants.invalidSum=invalid sum.
 merchants.limitExceed=limit was exceeded. Please try again.
 merchants.meansOfPayment=Payment method
 merchants.merchants=merchants
-merchants.modalInputCommission=stock exchange commission: __amount __currency (__percent)
+merchants.modalInputCommission=Stock exchange commission: __amount __currency (__percent)
 merchants.modalInputFinalSum=Total amount to be paid : __amount __currency
 merchants.modalInputHeader=You use a payment system __merchant for inputting __amount __currency
 merchants.modalOutputCommission=Exchange Fee will be : __amount __currency (__percent)
@@ -157,12 +157,13 @@ merchants.WithdrawRequestAccept=Withdrawal request was successfully accepted.
 merchants.WithdrawRequestDecline=Withdrawal request was declined.
 merchants.withdrawNotificationAccepted=Your withdrawal request #{0} through system {1} has been successfully accepted. Funds transferred to your wallet.
 merchants.withdrawNotificationDeclined=Your withdrawal request #{0} through system {1} was rejected.
+merchants.close=Close
 merchants.outputTitle=Withdrawal
 merchants.submitPayment=confirm payment
 merchants.successfulBalanceDeposit=you have successfully deposited your wallet in the amount: {0}
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
-merchants.depositNotification.body = Please pay %1s on the wallet %1s
+merchants.depositNotification.body = Please pay {0} on the wallet {1}
 merchants.depositNotification.header = Exrates payment notification
 merchants.depositNotificationWithFee = Please pay %1s on the wallet %1s (Including EDR Coin commission)
 merchants.sum=Sum
@@ -268,6 +269,11 @@ transaction.operationTypeOUTPUT=output
 transaction.perfectmoney=Perfect.Money
 transaction.walletId=wallet number
 transaction.yandexmoney=Yandex.Money
+transaction.status=Status
+transaction.provided=Confirmed
+transaction.notProvided=Waiting for confirmation
+transaction.confirmations=Waiting for confirmations: {0}/{1}
+merchants.warn=Please pay attention to the amount of money you inputting. It must exactly match the amount that is listed above
 transactions.absent=the history of transactions is absent
 transactions.title=history of transactions
 usermenu.history=history of transactions
