--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -165,7 +165,7 @@ merchants.sumToPay=Итого сумма к оплате
 merchants.withdraw=Вывести
 merchants.pendingEnrollment=Зачисление средств приозойдет в течении 48 часов
 #not translated
-merchants.depositNotification.body = Пожалуйста, оплатите %1s на кошелек %1s
+merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1}.
 #not translated
 merchants.depositNotificationWithFee = Пожалуйста, оплатите %1s на кошелек %1s (Включая комиссию EDR Coin)
 #not translated
@@ -196,6 +196,8 @@ merchants.WithdrawRequestError=Произошла ошибка, сообщите
 merchants.WithdrawRequestAccept=Заявка успешно принята
 #not translated
 merchants.WithdrawRequestDecline=Заявка отклонена
+#not translated
+merchants.close=Закрыть
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
 myorders.amountwithcommission=Сумма с комиссией
@@ -293,6 +295,16 @@ transaction.operationTypeOUTPUT=Вывод средств
 transaction.perfectmoney=Perfect.Money
 transaction.walletId=Номер кошелька
 transaction.yandexmoney=Яндекс.Деньги
+#not tranlsated
+transaction.status=Статус
+#not tranlsated
+transaction.provided=Подтверждено
+#not tranlsated
+transaction.notProvided=Ожидание
+#not tranlsated
+transaction.confirmations=Ожидание подтверждений: {0}/{1}
+#not tranlsated
+merchants.warn=Пожалуйста, обратите внимание на сумму, которую Вы вносите. Она должна точно соответствовать сумме, которая указана выше
 transactions.absent=История операций пуста
 transactions.title=История операций
 usermenu.history=История операций
