Adding button disabling while waiting response from the server

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -170,6 +170,7 @@ merchants.sum=Sum
 merchants.sumToPay=Sum to pay
 merchants.withdraw=Withdraw
 merchants.pendingEnrollment=The transfer of money will will occur within next 48 hours
+merchants.waiting=Waiting
 myorders.amountbuy=commission free amount
 myorders.amountsell=sum
 myorders.amountwithcommission=amount including commission
