--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -198,6 +198,8 @@ merchants.WithdrawRequestAccept=Заявка успешно принята
 merchants.WithdrawRequestDecline=Заявка отклонена
 #not translated
 merchants.close=Закрыть
+#not translated
+merchants.waiting=Ожидание
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
 myorders.amountwithcommission=Сумма с комиссией
