add  yandex kassa (for testing)

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -46,7 +46,7 @@ dashboard.BUY=BUY
 dashboard.FAQ=FAQ
 dashboard.PressAboutUs=press about us
 dashboard.SELL=SELL
-dashboard.aboutUs=aboutus
+dashboard.aboutUs=About us
 dashboard.allRightsReserved=© 2016 EXRATES LTD trade marks belong to their corresponding owners. all rights are reserved
 dashboard.amount=amount
 dashboard.buy=buy
@@ -54,6 +54,7 @@ dashboard.buyCurrency=buy currency
 dashboard.buyOrders=buy orders:
 dashboard.calculate=calculate:
 dashboard.contactsAndSupport=contacts and support
+dashboard.support=Support
 dashboard.depositAndWithdraw=deposit and withdraw
 dashboard.documentation=DOCUMENTATION
 dashboard.entrance=entrance
