--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -65,6 +65,7 @@ dashboard.buyCurrency=Купить валюту
 dashboard.buyOrders=Ордера на покупку:
 dashboard.calculate=Подсчитать:
 dashboard.contactsAndSupport=Контакты и поддержка
+dashboard.support=Поддержка
 dashboard.depositAndWithdraw=Пополнение и вывод
 dashboard.documentation=ДОКУМЕНТАЦИЯ
 dashboard.entrance=Вход
