Added About Us info

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -309,6 +309,13 @@ login.latinonly=The name must be Latin characters
 login.symbonly= Can contain the characters "-" and "_"
 login.notdigit= Must not start with a digit
 
+#not translated
+about_us.contacts = Our Contacts:
+#not translated
+about_us.telephone = Tel.: {0}
+#not translated
+about_us.email= Email: {0}
+
 
 admin.balance=Balance
 admin.transactions=Transactions
