--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -201,6 +201,12 @@ merchants.WithdrawRequestDecline=Заявка отклонена
 merchants.close=Закрыть
 #not translated
 merchants.waiting=Ожидание
+#not translated
+about_us.contacts = Наши контакты:
+#not translated
+about_us.telephone = Телефон:
+#not translated
+about_us.email= Email:
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
 myorders.amountwithcommission=Сумма с комиссией
