mywallets form + delete form + correct bugs

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -181,8 +181,8 @@ myorders.commission=Fee, %
 myorders.create=Create Order
 myorders.currbuy=buy
 myorders.currsell=sell
-myorders.datecreation=creation date
-myorders.datefinal=final date
+myorders.datecreation=created
+myorders.datefinal=accepted
 myorders.delete=delete
 myorders.deletefailed=The order can not be removed. Contact the administrator of the resource.
 myorders.deletesuccess=order was successfull deleted
