--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -215,8 +215,8 @@ myorders.commission=Комиссия, %
 myorders.create=Создать ордер
 myorders.currbuy=Покупаю
 myorders.currsell=Продаю
-myorders.datecreation=Дата создания
-myorders.datefinal=Дата исполнения
+myorders.datecreation=Создан
+myorders.datefinal=Исполнен
 myorders.delete=Удалить
 myorders.deletefailed=Ордер не может быть удален. Обратитесь к администратору ресурса.
 myorders.deletesuccess=Ордер успешно удален
