Fixed About Us russ locales && language switch

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -204,9 +204,9 @@ merchants.waiting=Ожидание
 #not translated
 about_us.contacts = Наши контакты:
 #not translated
-about_us.telephone = Телефон:
+about_us.telephone = Телефон: {0}
 #not translated
-about_us.email= Email:
+about_us.email= Email: {0}
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
 myorders.amountwithcommission=Сумма с комиссией
