my transaction form

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -340,3 +340,4 @@ order.commission=Commission
 order.amountwithcommission=Total with the commission
 order.minrate=The exchange rate must be greater than 0
 orders.exrate=Rate
+transaction.order=Order ID
