--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -373,3 +373,4 @@ order.commission=Комиссия
 order.amountwithcommission=Итого с комиссией
 order.minrate=Обменный курс должен быть больше 0
 orders.exrate=Курс
+transaction.order=Ордер ID
