Fixed issues with ru locale and BigDecimal strign representational

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -166,7 +166,7 @@ merchants.sumToPay=Итого сумма к оплате
 merchants.withdraw=Вывести
 merchants.pendingEnrollment=Зачисление средств приозойдет в течении 48 часов
 #not translated
-merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1}.
+merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1}
 #not translated
 merchants.depositNotificationWithFee = Пожалуйста, оплатите %1s на кошелек %1s (Включая комиссию EDR Coin)
 #not translated
