chart: add formated tip + add period switcher

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -373,4 +373,13 @@ order.commission=Комиссия
 order.amountwithcommission=Итого с комиссией
 order.minrate=Обменный курс должен быть больше 0
 orders.exrate=Курс
+orders.date=Дата
 transaction.order=Ордер ID
+chart.hour=час
+chart.hours=часов
+chart.hours1=часа
+chart.day=день
+chart.days=дней
+chart.month=месяц
+chart.months=месяцев
+chart.nodata=данные отсутствуют
