--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -340,4 +340,14 @@ order.commission=Commission
 order.amountwithcommission=Total with the commission
 order.minrate=The exchange rate must be greater than 0
 orders.exrate=Rate
+orders.date=Deal date
 transaction.order=Order ID
+chart.hour=hour
+chart.hours=hours
+chart.hours1=hours
+chart.day=day
+chart.days=days
+chart.month=month
+chart.months=months
+#cannot use 'chart.nodata = no data' - error provoked
+chart.nodata=data is absent
