--- a/Controller/src/main/resources/about_us.properties
+++ b/Controller/src/main/resources/about_us.properties
@@ -1,2 +1,3 @@
-contacts.telephone=+442036080751
+contacts.telephone=+44 203 608 07 51 &nbsp; &nbsp; +38 099 618 84 51
+contacts.telephone2=
 contacts.email=support@exrates.me
