add class for arithmetic operations and rounding BigDecimal

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -177,7 +177,7 @@ myorders.amountsell=sum
 myorders.amountwithcommission=amount including commission
 myorders.buy=
 myorders.buyorders=Purchase orders
-myorders.commission=Fee, %
+myorders.commission=Fee
 myorders.create=Create Order
 myorders.currbuy=buy
 myorders.currsell=sell
