--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -211,7 +211,7 @@ myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
 myorders.amountwithcommission=Сумма с комиссией
 myorders.buyorders=Ордера на покупку
-myorders.commission=Комиссия, %
+myorders.commission=Комиссия
 myorders.create=Создать ордер
 myorders.currbuy=Покупаю
 myorders.currsell=Продаю
