--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -356,3 +356,9 @@ emailsubmitnewip.subject=Confirm exrates.me your new ip address
 emailsubmitnewip.text=You have registered on exrates.me from an unfamiliar IP-address. Click here to confirm
 admin.newipproved=You have successfully confirmed IP-address
 admin.newipnotproved=Link to IP-address confirmation is not valid (expired)
+admin.usersWallet=Users wallets summary
+wallets.amount=number of accounts
+wallets.abalance=active balance
+wallets.rbalance=reserved
+wallets.average=on average per one account
+wallets.upload=upload the data
