--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -29,6 +29,15 @@ admin.status=Status
 admin.title=Administration
 admin.user=User
 admin.users=Users
+admin.upload = Upload
+admin.errorUploadFiles  = Error loading files. Valid format is *.png, *.jpg, *.jpeg not bigger than 5 MB
+admin.successUploadFiles = Files successfully uploaded
+admin.modal.delete = Delete
+admin.promptDeleteUserFiles = Are you sure you want to delete this file ?
+admin.successfulDeleteUserFiles = File removed successful
+admin.uploadFiles = Upload files (Only images *.png, *.jpeg, not bigger than 5 MB)
+admin.yourFiles= Uploaded files
+admin.internalError = An error has occurred. Please try again later.
 withdrawal.requestDatetime=Date of creation
 withdrawal.user=User
 withdrawal.amount=Amount
