--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -363,6 +363,24 @@ admin.finpasswordproved=Вы успешно подтвердили свой фи
 admin.finpasswordnotproved=Ссылка на подтверждение финансового пароля не действительна (просрочена).
 admin.passwordproved=Вы успешно подтвердили свой пароль
 admin.passwordnotproved=Ссылка на подтверждение пароля не действительна (просрочена).
+#not translated
+admin.upload = Загрузить
+#not translated
+admin.errorUploadFiles = Ошибка при загрузке файлов. Допустимый формат - *.png, *.jpg, *.jpeg объемом не более 5 Мб
+#not translated
+admin.internalError = Произошла ошибка. Пожалуйста попобуйте позже.
+#not translated
+admin.successUploadFiles = Файлы успешно загружены
+#not translated
+admin.modal.delete = Удалить
+#not translated
+admin.promptDeleteUserFiles = Вы действительно хотите удалить этот файл ?
+#not translated
+admin.successfulDeleteUserFiles = Файл успешно удален
+#not translated
+admin.uploadFiles = Загрузите файлы (Только картинки *.png, *.jpeg, объемом не более 5 Мб)
+#not translated
+admin.yourFiles= Загруженные файлы
 admin.ref=Ссылка
 orders.currencybuy=Покупка
 orders.currencysale=Продажа
