--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -362,3 +362,4 @@ wallets.abalance=active balance
 wallets.rbalance=reserved
 wallets.average=on average per one account
 wallets.upload=upload the data
+orders.volume=Volume
