--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -412,3 +412,4 @@ wallets.abalance=Баланс
 wallets.rbalance=Зарезервировано
 wallets.average=В среднем на счет
 wallets.upload=Выгрузить данные
+orders.volume=Объем
