add chart switching

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -363,3 +363,6 @@ wallets.rbalance=reserved
 wallets.average=on average per one account
 wallets.upload=upload the data
 orders.volume=Volume
+chart.candle=Candles
+chart.area=Line
+chart.wait=Wait ...
