--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -395,3 +395,6 @@ wallets.rbalance=Зарезервировано
 wallets.average=В среднем на счет
 wallets.upload=Выгрузить данные
 orders.volume=Объем
+chart.candle=Свечи
+chart.area=Линия
+chart.wait=Загрузка ...
