PROGRAM-136, 137 + some correction in 135

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -398,3 +398,28 @@ orders.volume=Объем
 chart.candle=Свечи
 chart.area=Линия
 chart.wait=Загрузка ...
+orderinfo.title=Удаление ордера
+orderinfo.id=ID
+orderinfo.status=Статус
+orderinfo.createdate=Создан
+orderinfo.acceptdate=Акцептован
+orderinfo.rate=Курс
+orderinfo.baseamount=Количество
+orderinfo.convertamount=Сумма
+orderinfo.companycommission=Комиссия компании
+orderinfo.creator=Создал
+orderinfo.acceptor=Акцептовал
+orderinfo.deletedcount=Сторнировано записей (с учетом транзакций):
+orderinfo.deleteerror=Ошибка при отмене ордера
+orderinfo.searcherror= Ордер не найден
+ordersearch.title=Поиск ордера
+ordersearch.submit=Искать
+ordersearch.currencypair=Пара
+ordersearch.type=Тип ордера
+ordersearch.date=Дата создания
+ordersearch.rate=Курс
+ordersearch.volume=Сумма
+ordersearch.dateplaceholder=гггг-мм-дд ЧЧ:мм:сс
+ordersearch.errornumber=Формат: цифры, точка
+ordersearch.errordate=Формат: гггг-мм-дд ЧЧ:мм:сс
+
