--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -240,7 +240,7 @@ register.submit=get registered
 register.successfullyproved=You have successfully verified your email hash. Now you can log in
 register.title=registration of a new user
 submitorder.buy=buy
-submitorder.cancell=cancel
+submitorder.cancell=Cancel
 submitorder.change=change order
 submitorder.commission=commission
 submitorder.edit=edit order
@@ -366,3 +366,25 @@ orders.volume=Volume
 chart.candle=Candles
 chart.area=Line
 chart.wait=Wait ...
+orderinfo.title=Removal of the order
+orderinfo.id=ID
+orderinfo.status=Status
+orderinfo.createdate=Created
+orderinfo.acceptdate=Accepted
+orderinfo.rate=Rate
+orderinfo.baseamount=Amount
+orderinfo.convertamount=Total
+orderinfo.companycommission=Company commission
+orderinfo.creator=Creator
+orderinfo.acceptor=Acceptor
+orderinfo.deletedcount=Number of cancelled records (including transactions):
+orderinfo.deleteerror= There was error while cancelling order
+orderinfo.searcherror= Order not found
+ordersearch.title=Search the order
+ordersearch.submit=Search
+ordersearch.currencypair=Currency pair
+ordersearch.type=Type the order
+ordersearch.date=Date
+ordersearch.rate=Rate
+ordersearch.volume=Volume
+ordersearch.dateplaceholder=yyyy-mm-dd HH:mm:ss
