--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -370,7 +370,7 @@ wallets.amount=number of accounts
 wallets.abalance=active balance
 wallets.rbalance=reserved
 wallets.average=on average per one account
-wallets.upload=upload the data
+wallets.download=Download the data
 orders.volume=Volume
 chart.candle=Candles
 chart.area=Line
@@ -396,6 +396,13 @@ ordersearch.type=Type the order
 ordersearch.date=Date
 ordersearch.rate=Rate
 ordersearch.volume=Volume
-ordersearch.dateplaceholder=yyyy-mm-dd HH:mm:ss
+ordersearch.datetimeplaceholder=yyyy-mm-dd HH:mm:ss
+ordersearch.datelaceholder=yyyy-mm-dd
 ordersearch.errornumber=Format: digits, point
-ordersearch.errordate=Format: yyyy-mm-dd HH:mm:ss
+ordersearch.errordatetime=Format: yyyy-mm-dd HH:mm:ss
+ordersearch.errordate=Format: yyyy-mm-dd
+orders.getordererror= Order not found with ID {0}
+orders.acceptsaveerror=Error while saving order
+transaction.providerror=Failed to provide transaction
+order.notenoughreservedmoneyforcreator=Not enough reserved money for creator when accept the order
+order.notenoughmoneyforacceptor=Not enough available money for acceptor when accept the order
