--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -411,7 +411,7 @@ wallets.amount=Количество счетов
 wallets.abalance=Баланс
 wallets.rbalance=Зарезервировано
 wallets.average=В среднем на счет
-wallets.upload=Выгрузить данные
+wallets.download=Выгрузить данные
 orders.volume=Объем
 chart.candle=Свечи
 chart.area=Линия
@@ -437,7 +437,13 @@ ordersearch.type=Тип ордера
 ordersearch.date=Дата создания
 ordersearch.rate=Курс
 ordersearch.volume=Сумма
-ordersearch.dateplaceholder=гггг-мм-дд ЧЧ:мм:сс
+ordersearch.datetimeplaceholder=гггг-мм-дд ЧЧ:мм:сс
+ordersearch.datelaceholder=гггг-мм-дд
 ordersearch.errornumber=Формат: цифры, точка
-ordersearch.errordate=Формат: гггг-мм-дд ЧЧ:мм:сс
-
+ordersearch.errordatetime=Формат: гггг-мм-дд ЧЧ:мм:сс
+ordersearch.errordate=Формат: гггг-мм-дд
+orders.getordererror= Не найден ордер с ID {0}
+orders.acceptsaveerror=Ошибка при сохранении ордера
+transaction.providerror=Ошибка при создании транзакции
+order.notenoughreservedmoneyforcreator=Не достаточно средств на резерве создателя ордера
+order.notenoughmoneyforacceptor=Не достаточно средств на счету для акцепта ордера
